[package]
name = "sbpf-linker"
edition = "2024"
version = "0.1.9"
authors = ["Claire Fan <claire@blueshift.gg>"]
description = "Upstream BPF linker for SBPF V0/V3 programs"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/blueshift-gg/sbpf-linker"
repository = "https://github.com/blueshift-gg/sbpf-linker"
keywords = ["cli", "sbpf", "linker", "solana"]
categories = ["command-line-utilities"]

[lib]
crate-type = ["cdylib", "lib"]
name = "sbpf_linker"

[dependencies]
sbpf-assembler = "0.1.9"
sbpf-common = "0.1.9"
clap = { workspace = true }
either = { version = "1.15.0", features = ["serde"] }
object = { version = "0.37.3", features = ["write"] }
bpf-linker = { version = "0.10.3", default-features = false }
thiserror = "2.0.17"

tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }
tracing-tree = "0.4"

tracing = "0.1"
anyhow = { workspace = true }

[dev-dependencies]
compiletest_rs = "0.11.0"
regex = { version = "1.11.1", default-features = false }
rustc-build-sysroot = { version = "0.5.11", default-features = false }
which = { version = "8.0.0", default-features = false, features = [
    "real-sys",
    "regex",
] }

[[bin]]
name = "sbpf-linker"

[[test]]
name = "tests"
path = "tests/tests.rs"

[workspace]
members = ["xtask"]

[workspace.dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.56", features = ["derive"] }
walkdir = "2.5.0"


[workspace.package]
edition = "2024"

[features]
default = ["bpf-linker/default"]
